# ai-flight-simulator

./: .gitignore  ARCHITECTURE.md  CLOUD_SETUP.md  CODELAB_CLEANUP_PLAN.md  DEPLOY_TEST_GUIDE.md  DRY_RUN_GUIDE.md  GEMINI.md  PUBLICATION_GAPS.md  README.md  REFACTOR_INSTRUCTIONS.md  STRIP_DOWN_PLAN.md  app.py  codelab.html  config.py  debug_adk.py  debug_adk2.py  debug_adk3.py  debug_adk_error.py  fix_mermaid.py  fix_render.js  fix_svg_parser.py  generate_texture.py  index.html  my_codelab.html  pyproject.toml  pytest.ini  render_mermaid.py  requirements.txt  setup_gcp.ps1  setup_gcp.sh  slides.html  teachers_prep.md  test_sm.py  tickets.csv  tickets_v2.csv
assets/: WebGL Flight Sim Optimization Deep Dive.docx
codelab/: 00-introduction.md  01-cloud-setup.md  02-modular-architecture.md  03-geospatial-engine.md  03-telemetry-geocoding.md  04-ai-vision.md  04-generative-biomes.md  05-immersive-audio.md  06-collaborative-agents.md  06-multiverse-state.md  06-persistent-world.md  README.md
docs/: ARCHITECTURE.md  CLOUD_SETUP.md  CODELAB_CLEANUP_PLAN.md  CODELAB_REFACTOR_PLAN.md  CODELAB_REVIEW.md  Codelab Redesign_ AI Flight Simulator.md  DEEP_RESEARCH_PROMPT.md  DRY_RUN_GUIDE.md  EMAILS.md  FULL_CODELAB.md  INSTALL_GUIDE.md  NAPKIN_PROMPTS.txt  SLIDE_IMAGE_PROMPTS.txt
scripts/: generate_diagrams.py  generate_texture.py  setup_gcp.sh
services/: ai_vision.py  audio_engine.py  control_tower.py  geospatial.py  state_sync.py  vault.py
tests/: test_ai_vision.py  test_app_routing.py  test_audio_engine.py  test_config.py  test_geospatial.py  test_state_sync.py  (+1 more)
(+6 files in other folders)
